# TuiQuarium

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/tuiq-core/: Cargo.toml
crates/tuiq-core/src/: animation.rs  behavior.rs  boids.rs  bootstrap.rs  brain.rs  calibration.rs  components.rs  ecology_equilibrium.rs  ecosystem.rs  environment.rs  genetics.rs  genome.rs  lib.rs  needs.rs  phenotype.rs  pheromone.rs  physics.rs  plant_lifecycle.rs  producer_lifecycle.rs  producer_reproduction.rs  save.rs  spatial.rs  spawner.rs  stats.rs  systems.rs
crates/tuiq-render/: Cargo.toml
crates/tuiq-render/fonts/: CascadiaMono-LICENSE.txt
crates/tuiq-render/src/: ascii.rs  constants.rs  effects.rs  gif_recorder.rs  hud.rs  lib.rs  palette.rs  screenshot.rs  tank.rs  templates.rs
docs/: ecology-equilibrium-model.md
src/: main.rs  session_persistence.rs  wgpu_frontend.rs
