[workspace]
members = ["crates/tuiq-core", "crates/tuiq-render"]

[package]
name = "tuiquarium"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
tuiq-core = { path = "crates/tuiq-core" }
tuiq-render = { path = "crates/tuiq-render" }
crossterm = "0.28"
hecs = "0.11"
ratatui = "0.30"
pollster = "0.4"
ratatui-wgpu = { path = "../ratatui-wgpu" }
rustybuzz = "0.20.1"
winit = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
